@startuml Core Architecture Class Diagram

skinparam classAttributeIconSize 0
skinparam classFontSize 11
skinparam packageFontSize 13
skinparam linetype ortho

title Open Ticket AI - Core Architecture Class Diagram

package "Pipeline Core" {
    abstract class Pipe {
        +pipe_config: PipeConfig
        --
        +process(ctx: PipeContext): PipeContext
        +have_dependent_pipes_been_run(ctx): bool
        #{abstract} _process(): PipeResult
    }

    class PipeConfig {
        +id: str
        +use: str
        +params: BaseModel
        +if_: str | bool
        +depends_on: list[str]
        +steps: list[PipeConfig]?
    }

    class PipeContext {
        +pipes: dict[str, PipeResult]
        +params: dict
        +parent: PipeContext?
        --
        +has_succeeded(pipe_id: str): bool
    }

    class PipeResult {
        +success: bool
        +failed: bool
        +message: str
        +data: BaseModel
    }
}

package "Configuration & DI" {
    abstract class Renderable {
        +__init__(params: BaseModel)
    }

    class RenderableConfig {
        +uid: str
        +id: str
        +use: str
        +injects: dict[str, str]
        +params: BaseModel
    }

    class RenderableFactory {
        --
        +create_pipe(pipe_config, scope): Pipe
        +create_renderable(config): Renderable
    }
}

package "Orchestration" {
    class Orchestrator {
        -_trigger_registry: dict
        -_runners: dict
        --
        +start()
        +stop()
        +run()
    }

    class RunnerDefinition {
        +id: str?
        +on: list[TriggerDefinition]
        +run: PipeConfig
        +params: RunnerParams
    }

    class RunnerParams {
        +concurrency: ConcurrencySettings?
        +retry: RetrySettings?
        +timeout: str?
        +priority: int
    }

    class PipeRunner {
        +definition: RunnerDefinition
        --
        +execute()
        +on_trigger_fired()
    }

    abstract class Trigger {
        +trigger_def: TriggerDefinition
        -_observers: list[PipeRunnerObserver]
        --
        +attach(observer)
        +detach(observer)
        +notify()
        #{abstract} start()
        #{abstract} stop()
    }

    class TriggerDefinition {
        +id: str
        +use: str
        +params: BaseModel
    }

    class OrchestratorConfig {
        +defaults: dict?
        +runners: list[RunnerDefinition]
    }
}

package "Ticket System Integration" {
    abstract class TicketSystemService {
        #{abstract} update_ticket(id, updates): bool
        #{abstract} find_tickets(criteria): list[UnifiedTicket]
        #{abstract} find_first_ticket(criteria): UnifiedTicket?
        #{abstract} add_note(id, note): bool
    }

    class UnifiedTicket {
        +id: str?
        +subject: str?
        +body: str?
        +queue: UnifiedEntity?
        +priority: UnifiedEntity?
        +notes: list[UnifiedNote]?
    }

    class UnifiedNote {
        +id: str?
        +subject: str
        +body: str
    }

    class TicketSearchCriteria {
        +queue: UnifiedEntity?
        +limit: int?
        +offset: int?
    }

    class UnifiedEntity {
        +id: str?
        +name: str?
    }
}

' Core Pipeline Relationships
Pipe --> PipeConfig : configured by
Pipe --> PipeContext : processes
PipeContext --> PipeResult : stores
PipeConfig --|> RenderableConfig

' Configuration & DI Relationships
Pipe --|> Renderable
TicketSystemService --|> Renderable
Trigger --|> Renderable
RenderableConfig --> Renderable : defines
RenderableFactory --> Pipe : creates
RenderableFactory --> Trigger : creates

' Orchestration Relationships
Orchestrator --> OrchestratorConfig : configured by
Orchestrator --> PipeRunner : manages
Orchestrator --> Trigger : manages
PipeRunner --> RunnerDefinition : defined by
RunnerDefinition --> PipeConfig : runs
RunnerDefinition --> TriggerDefinition : triggered by
RunnerDefinition --> RunnerParams : configured by
Trigger --> TriggerDefinition : configured by
Trigger --> PipeRunner : notifies
RenderableFactory --> PipeRunner : creates pipes for
TriggerDefinition --|> RenderableConfig

' Ticket System Relationships
TicketSystemService --> UnifiedTicket : returns
TicketSystemService --> UnifiedNote : uses
TicketSystemService --> TicketSearchCriteria : uses
UnifiedTicket --> UnifiedEntity : contains
UnifiedTicket --> UnifiedNote : contains

@enduml
